--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="mesh.css">
 	</head>
 	<body>
-
 		<script src="js/three.js"></script>
-    <script src="js/tic.js"></script>
+    <script src="../three.js-master/three.js-master/examples/js/controls/OrbitControls.js"></script>
+    <script defer src="js/tic.js"></script>
 	</body>
 </html>
 
