--- a/index.html
+++ b/index.html
@@ -5,12 +5,31 @@
 		<style>
 			body { margin: 0; }
 		</style>
-  <link rel="stylesheet" href="mesh.css">
+  <link rel="stylesheet" href="tic.css">
 	</head>
 	<body>
 		<script src="js/three.js"></script>
     <script src="../three.js-master/three.js-master/examples/js/controls/OrbitControls.js"></script>
     <script defer src="js/tic.js"></script>
+    <div id="container">
+      <div id="toposMenu">
+        some stuff in this div
+        and other text
+        that goes 
+        in the topos menu
+        <button type="button" id="planeButton"> Plane </button>
+        <button type="button" id="mobiusButton"> Mobius </button>
+        <button type="button" id="torusButton"> Torus </button>
+        <button type="button" id="cylinderButton"> Cylinder </button>
+        <button type="button" id="altCylinderButton"> Alt Cylinder </button>
+      </div>
+      <div id="key">
+        Red : X Green : Y Blue : Z
+
+      </div>
+    </div>
+
+
 	</body>
 </html>
 
